// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sc-order-password does not render if email exists 1`] = `
<sc-order-password email-exists="" size="medium" style="display: none;">
  <mock:shadow-root></mock:shadow-root>
</sc-order-password>
`;

exports[`sc-order-password does not render if logged in 1`] = `
<sc-order-password logged-in="" size="medium" style="display: none;">
  <mock:shadow-root></mock:shadow-root>
</sc-order-password>
`;

exports[`sc-order-password renders 1`] = `
<sc-order-password size="medium">
  <mock:shadow-root>
    <div class="password">
      <sc-input help="" name="password" showlabel="" size="medium" type="password" value=""></sc-input>
    </div>
  </mock:shadow-root>
</sc-order-password>
`;

exports[`sc-order-password renders confirmation if provided 1`] = `
<sc-order-password confirmation="" size="medium">
  <mock:shadow-root>
    <div class="password">
      <sc-input help="" name="password" showlabel="" size="medium" type="password" value=""></sc-input>
      <sc-input help="Help" label="Label" placeholder="Placeholder" size="medium" type="password" value=""></sc-input>
    </div>
  </mock:shadow-root>
</sc-order-password>
`;
